--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/han-jojo/Instaclone-Backend-built-with-Prisma-and-GraphQL/issues"
   },
-  "homepage": "https://github.com/han-jojo/Instaclone-Backend-built-with-Prisma-and-GraphQL#readme"
+  "homepage": "https://github.com/han-jojo/Instaclone-Backend-built-with-Prisma-and-GraphQL#readme",
+  "dependencies": {
+    "apollo-server": "^2.22.2",
+    "graphql": "^15.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
