--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "fs-capacitor": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
