--- a/package.json
+++ b/package.json
@@ -1,54 +1,21 @@
 {
-  "name": "Instaclone-Backend-built-with-Prisma-and-GraphQL",
+  "name": "instagram-backend",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
-    "dev": "nodemon --exec babel-node src/server --delay 1",
-    "migrate": "npx prisma migrate dev --preview-feature",
-    "studio": "npx prisma studio",
-    "tunnel": "npx localtunnel --port 4000",
-    "build": "babel src --out-dir build",
-    "start": "node build/server"
+    "dev": ""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/han-jojo/Instaclone-Backend-built-with-Prisma-and-GraphQL.git"
+    "url": "git+https://github.com/han-jojo/instagram-backend.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/han-jojo/Instaclone-Backend-built-with-Prisma-and-GraphQL/issues"
+    "url": "https://github.com/han-jojo/instagram-backend/issues"
   },
-  "homepage": "https://github.com/han-jojo/Instaclone-Backend-built-with-Prisma-and-GraphQL#readme",
-  "dependencies": {
-    "@babel/cli": "^7.14.3",
-    "@prisma/client": "^2.21.2",
-    "apollo-server": "^2.22.2",
-    "apollo-server-express": "^2.22.2",
-    "aws-sdk": "^2.888.0",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "regenerator-runtime": "^0.13.7",
-    "fs-capacitor": "^6.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/node": "^7.13.13",
-    "@babel/plugin-transform-regenerator": "^7.13.15",
-    "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "^7.13.15",
-    "nodemon": "^2.0.7",
-    "prisma": "^2.21.2"
-  },
-  "resolutions": {
-    "fs-capacitor": "^6.2.0",
-    "graphql-upload": "^11.0.0"
-  }
+  "homepage": "https://github.com/han-jojo/instagram-backend#readme",
+  "dependencies": {},
+  "devDependencies": {}
 }
