--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "graphql": "^15.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11"
+    "@babel/preset-env": "^7.12.11",
+    "@prisma/cli": "^2.14.0",
+    "nodemon": "^2.0.7"
   }
 }
