--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon --exec babel-node server"
+    "dev": "nodemon --exec babel-node server",
+    "migrate": "npx prisma migrate dev --preview-feature",
+    "studio": "npx prisma studio"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,11 @@
   },
   "homepage": "https://github.com/han-jojo/instagram-backend#readme",
   "dependencies": {
+    "@prisma/client": "^2.14.0",
     "apollo-server": "^2.19.1",
-    "graphql": "^15.4.0"
+    "dotenv": "^16.0.1",
+    "graphql": "^15.4.0",
+    "graphql-tools": "^7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
