--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@prisma/client": "^2.14.0",
     "apollo-server": "^2.19.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.2"
+    "graphql-tools": "^7.0.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
