--- a/package.json
+++ b/package.json
@@ -2,44 +2,46 @@
   "name": "instagram-backend",
   "version": "1.0.0",
   "description": "",
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/han-jojo/instagram-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/han-jojo/instagram-backend/issues"
+  },
+  "homepage": "https://github.com/han-jojo/instagram-backend#readme",
   "scripts": {
     "preinstall": "npx npm-force-resolutions@0.0.3",
     "dev": "nodemon --exec babel-node server --delay 2",
     "migrate": "npx prisma migrate dev --preview-feature",
     "studio": "npx prisma studio"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/han-jojo/instagram-backend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/han-jojo/instagram-backend/issues"
-  },
-  "homepage": "https://github.com/han-jojo/instagram-backend#readme",
   "dependencies": {
-    "@prisma/client": "^2.14.0",
-    "apollo-server": "^2.19.1",
-    "apollo-server-express": "^2.19.2",
+    "@graphql-tools/load-files": "^6.6.0",
+    "@graphql-tools/merge": "^8.3.0",
+    "@graphql-tools/schema": "^8.5.0",
+    "@prisma/client": "^3.15.2",
+    "apollo-server": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
-    "express": "^4.17.1",
-    "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.2",
+    "express": "^4.18.1",
+    "graphql": "^16.5.0",
+    "graphql-upload": "^15.0.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@prisma/cli": "^2.14.0",
-    "nodemon": "^2.0.7"
+    "@babel/core": "^7.18.9",
+    "@babel/node": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "nodemon": "^2.0.19",
+    "prisma": "^3.15.2"
   },
   "resolutions": {
-    "fs-capacitor": "^6.2.0",
-    "graphql-upload": "^11.0.0"
+    "fs-capacitor": "^6.2.0"
   }
 }
